@@ -461,8 +461,7 @@ individual processors and memory<BR>
 	when CR_CPU or CR_CPU_MEMORY is selected. 
 	They are considered to compute the total number of 
 	tasks when -n is not specified
-    <DD> Note: All CR_s assume Shared=No or Shared=Force EXCEPT for 
-	CR_MEMORY which assumes Shared=Yes
+    <DD> Note: CR_MEMORY assumes Shared=Yes
 <DT> <input type="radio" name="cons_res_params" value="CR_CPU" checked
 	    onClick="javascript:set_select_type(this, 'cons_res')">
     <B>CR_CPU</B>: (default)
@@ -654,6 +653,6 @@ before terminating all remaining tasks. A value of zero indicates unlimited wait
 </FORM>
 <HR>
 <p class="footer">UCRL-WEB-225274<br>
-Last modified 17 May 2007</p>
+Last modified 2 July 2007</p>
 </BODY>
 
