@@ -425,6 +425,13 @@ typedef enum select_type_plugin_info {
 #define TASK_PARAM_CPUSETS 0x0001
 #define TASK_PARAM_SCHED   0x0002
 
+enum part_shared {
+	SHARED_NO = 0,		/* Nodes never shared in partition */
+	SHARED_YES,		/* Nodes possible to share in partition */
+	SHARED_FORCE,		/* Nodes always shares in partition */
+	SHARED_EXCLUSIVE	/* Nodes never shared even with cons_res */
+};
+
 /*****************************************************************************\
  *	PROTOCOL DATA STRUCTURE DEFINITIONS
 \*****************************************************************************/
@@ -797,8 +804,7 @@ typedef struct partition_info {
 	uint16_t default_part;	/* 1 if this is default partition */
 	uint16_t hidden;	/* 1 if partition is hidden by default */
 	uint16_t root_only;	/* 1 if allocate must come for user root */
-	uint16_t shared;	/* 1 if job can share nodes, 
-				 * 2 if job must share nodes */
+	uint16_t shared;	/* See part_shared above */
 	uint16_t state_up;	/* 1 if state is up, 0 if down */
 	char *nodes;		/* list names of nodes in partition */
 	int *node_inx;		/* list index pairs into node_table:
