@@ -22,6 +22,13 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 1.2.12
 =========================
  -- Increase maximum message size from 1MB to 16MB, from Ernest Artiaga, BSC. 
+ -- In PMI_Abort(), log the event and abort the entire job step.
+ -- Add support for additional PMI functions: PMI_Get_clique_ranks and 
+    PMI_Get_clique_size (from Chuck Clouston, Bull).
+ -- Report an error when a hostlist comes in appearing to be a box but not 
+    formatted in XYZxXYZ format.
+ -- Add support for partition configuration "Shared=exclusive". This is 
+    equivalent to "srun --exclusive" when select/cons_res is configured.
 
 * Changes in SLURM 1.2.11
 =========================
@@ -48,8 +55,8 @@ documents those changes that are of interest to users and admins.
     based upon GNU make-3.81. Patch is in "etc/make.slurm.patch".
  -- Added '-b' option to sbatch for easy MOAB trasition to sbatch instead of
     srun.  Option does nothing in sbatch.
- -- Changed wiki2's handling of a node state in Completiting to return 'busy' 
-    instead of 'running' which is already there in slurm1.1
+ -- Changed wiki2's handling of a node state in Completing to return 'busy' 
+    instead of 'running' which matches slurm version 1.1
 
 * Changes in SLURM 1.2.10
 =========================
